@@ -7,6 +7,10 @@ Revision history for Perl module Math::Prime::Util::GMP
     - miller_rabin_random wasn't initializing a variable.  Fixed and test
       added.  Thanks to Alexandr Ciornii for timely reporting.
 
+    [PERFORMANCE]
+
+    - sieve_prime_cluster up to 2x faster.
+
 
 0.43 2017-03-12
 
